# dog-cognition-research

./: .gitignore  README.md  license.txt
code/cpp/projects/qt/qtm/: build-root-both--groups.pri  build-root-both.pri
code/cpp/projects/qt/qtm/isobuild/prelim/contrib/all/: build-area.pri
code/cpp/src/prelim/: accessors.h  aqns.h  enum-macros.h  global-macros.h  global-types.h  macro-ladder.h  menu-header-label.h  scoping-if.h
code/cpp/src/prelim/contrib/nathaniel/cutelyst/-build_/preferred/: NOTES
code/cpp/src/prelim/contrib/nathaniel/cutelyst/-build_/preferred/which/: NOTES
code/cpp/src/prelim/contrib/nathaniel/cutelyst/-build_/qt/: cutelyst.pro
code/cpp/src/prelim/contrib/nathaniel/cutelyst/-build_/qt/preferred/: cmake.pri  compiler.pri
code/cpp/src/prelim/contrib/nathaniel/cutelyst/-build_/run-cmake/: run-cmake.sh
code/cpp/src/prelim/contrib/nathaniel/cutelyst/-build_/run-cmake/working/: NOTES
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/Books_3-1/Books_3-1/: CMakeLists.txt
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/Books_3-1/Books_3-1/src/: CMakeLists.txt  books.cpp  books_3-1.cpp  books_3-1.h
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/Books_3-1/tsi/: run-cutelyst-app.sh  run-cutelyst.sh
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/Chasm-app/Chasm-app/: CMakeLists.txt
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/Chasm-app/Chasm-app/root/src/: ok1.html
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/Chasm-app/Chasm-app/src/: CMakeLists.txt  chasm-app.cpp  chasm-app.h  chasm-info.cpp  root.h
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/Chasm-app/tsi/: run-cutelyst-app-qtc.sh  run-cutelyst.sh
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/Chasm-demo/Chasm-demo/: CMakeLists.txt
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/Chasm-demo/Chasm-demo/src/: CMakeLists.txt  chasm-demo.cpp  chasm-demo.h  chasm-info.h  root.cpp
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/Chasm-demo/tsi/: run-cutelyst-app.sh  run-cutelyst-qtc.sh
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/blank/tsi/: run-cutelyst-app.sh  run-cutelyst.sh
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/books-2/books-2/: CMakeLists.txt
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/books-2/books-2/src/: CMakeLists.txt  books-2.cpp  books-2.h  books.h  root.cpp
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/books-2/tsi/: run-cutelyst-app.sh  run-cutelyst.sh
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/books1/_tsi1st/: _run.sh
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/books1/books1/: CMakeLists.txt
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/books1/tsi/: run-cutelyst-app.sh  run-cutelyst.sh
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/demo-tutorial/_tsi1st/: create-app.sh
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/demo-tutorial/demo-tutorial/: CMakeLists.txt
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/demo-tutorial/demo-tutorial/src/: CMakeLists.txt  books.cpp  books.h  demo-tutorial.cpp  demo-tutorial.h  root.h
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/demo-tutorial/tsi/: run-cutelyst-app.sh  run-cutelyst.sh
code/cpp/src/prelim/contrib/nathaniel/cutelyst/framework/: CMakeLists.txt
code/cpp/src/prelim/contrib/nathaniel/cutelyst/framework/Cutelyst/: CMakeLists.txt  a_macros.h  action.cpp  action.h  application.cpp  application.h  context.cpp  context.h  context_p.h  dispatcher.cpp  utils.cpp
code/cpp/src/prelim/contrib/nathaniel/cutelyst/framework/cmd/: helper.cpp  main.cpp
code/cpp/src/prelim/contrib/nathaniel/cutelyst/tsi/: global-types.h
code/cpp/src/prelim/tagged-ptr/mz/: tagged_ptr.hpp
(+705 files in other folders)
